overflow img fix

--- a/estilos/scss/estilos.scss
+++ b/estilos/scss/estilos.scss
@@ -249,6 +249,7 @@ article{
     display: grid;
     scroll-snap-align: center;
     grid-template-columns: 50% 50%;
+    overflow-x: hidden;
     @media screen and (max-width:450px) {
         display: flex;
         justify-content: center;
@@ -320,10 +321,11 @@ article{
             @media screen and (max-width:450px) {
                 width: 200px;
                 position: relative;
-                right: 0px;
+                right: 75px;
                 margin-left: 250px;
-                top: 0px;
+                top: 100px;
                 z-index: -1;
+                opacity: .8;
             }
             
             @keyframes planetMoving {
